k8s/transmission/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - protocol: TCP
      name: torrent-tcp
      port: 51413
      nodePort: 51413
    - protocol: UDP
      name: torrents-udp
      port: 51413
      nodePort: 51413
  selector:
    app: transmission
